# haskellbook

./: .gitignore
Chapter_10/: database_processing.hs  exercises.hs
Chapter_11/: arity.hs  binary_tree.hs  exercises.hs  newtypes.hs  record_product.hs  vehicles.hs  vigenere.hs
Chapter_12/: exercises.hs
Chapter_13/: palindrome.hs  person.hs
Chapter_13/cipher/: cipher.cabal
Chapter_13/hangman/: hangman.cabal
Chapter_13/hangman/data/: dict.txt
Chapter_13/hangman/src/: Main.hs
Chapter_13/hangman/tests/: tests.hs
Chapter_13/hello/: hello.cabal
Chapter_14/: arbitrary_instances.hs  stack.yaml  try_quick_check.hs
Chapter_14/addition/: Addition.hs  addition.cabal
Chapter_14/morse/: morse.cabal
Chapter_14/wordnumber/: wordnumber.cabal
Chapter_15/: madness.hs  optional.hs
Chapter_15/exercises/: package.yaml
Chapter_15/monoid-quickcheck/: .gitignore  ChangeLog.md  README.md  package.yaml
Chapter_15/orphan-instance/: Listy.hi  ListyInstances.hi  (+1 more)
Chapter_16/: BeKind.hs  HeavyLifting.hs  ReplaceExperiment.hs  functors.hs
Chapter_17/: applicatives.hs  exercises-combinations.hs  exercises-constant.hs  exercises-fixedupper.hs  exercises-identity.hs  exercises-lookups.hs
Chapter_18/: exercise-bind.hs  exercises-functions.hs
Chapter_19/: monoid-function.hs
Chapter_2/: FunctionWithLet.hs  FunctionWithWhere.hs  exercises.hs  learn.hs  test.hs
Chapter_20/: exercises.hs  instances-foldable.hs  library-functions.hs
Chapter_21/: types.hs
Chapter_22/: exercises-reading-comprehension.hs  function-applicative.hs  new-beginning.hs  pretty-reader.hs  reader-practice.hs  short-exercises.hs
Chapter_23/: exercises.hs  fizzbuzz.hs  moi.hs  random-example-2.hs  random-example.hs
Chapter_25/: Bifunctor.hs  Compose.hs  IdentityT.hs
Chapter_26/: EitherT.hs  FixtheCode.hs  HitCounter.hs  LiftMore.hs  MaybeT.hs  MonadTransTypes  MoreExtensible.hs  OuterInner.hs  ReaderT.hs  ScottyEither.hs  ScottyExceptT.hs  StateT.hs  TemporaryExtension.hs  WritetheCode.hs  scotty.hs
Chapter_27/: ForceBottom.hs  OutsideIn.hs  StrictList.hs
Chapter_28/: bytestring.hs  char8bad.hs  text.hs
Chapter_29/: blah.hs  mvar.hs
Chapter_3/: TopOrLocal.hs  exercises.hs  print1.hs  print2.hs  print3.hs  print3flipped.hs  reverse.hs
Chapter_30/: another-experiment.hs  async-exceptions.hs  expanded-writePls.hs  our-exceptions.hs  try-except.hs  wait-what.hs  writePls.hs
Chapter_31/: Notes.txt
Chapter_31/fingerd/: finger.db  fingerd.cabal
Chapter_31/fingerd/src/: Database.hs  Debug.hs  Main.hs  insertClient.hs  userAddModify.hs
Chapter_4/: exercises.hs  greetIfCool1.hs  greetIfCool2.hs
Chapter_5/: arith3broken.hs  exercises.hs  sing.hs  typeInference1.hs  typeInference2.hs  typekwando.hs
Chapter_6/: data_example.hs  exercises.hs  type_example.hs
Chapter_7/: arith2.hs  arith4.hs  exercises.hs  guards.hs  higher_order.hs  matchingTuples1.hs  registered_user.hs  where_penguins_live.hs
Chapter_8/: exercises.hs  factorial.hs  fibonacci.hs  word_number.hs
Chapter_9/: cipher.hs  enum_from_to.hs  exercises.hs  square_cube.hs  thy_fearful_symmetry.hs  zipping.hs
(+136 files in other folders)
