name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,random
                      ,split
                      ,QuickCheck

test-suite tests
  ghc-options:        -Wall -fno-warn-orphans
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     tests
  build-depends:      base >= 4.7 && < 5
                     ,containers
                     ,QuickCheck
  default-language:   Haskell2010
