name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Debug.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , network

executable fingerd
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Database
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable useraddmod
  hs-source-dirs:      src
  main-is:             userAddModify.hs
  other-modules:       Database
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text

executable insertclient
  hs-source-dirs:      src
  main-is:             insertClient.hs
  other-modules:       
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , text

library
  exposed-modules:     Database
  hs-source-dirs:      src
  --other-modules:       Paths_fingerd
  build-depends:       base >=4.7 && <5
                     , sqlite-simple
                     , text
                     , network
                     , raw-strings-qq
                     , bytestring
  default-language:    Haskell2010